--- a/Taller HTML Mision 1/taller1/public/css/estilo.css
+++ b/Taller HTML Mision 1/taller1/public/css/estilo.css
@@ -1,3 +1,172 @@
-h1{
-    color:red;
+/* Reset de estilos predeterminados del navegador */
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
 }
+
+/* Estilos generales */
+body {
+    font-family: Arial, Helvetica, sans-serif;
+    line-height: 1.6;
+    background-color: #f4f4f4;
+    height: 100%;
+    padding: 0;
+}
+
+/* Estilos del contenedor principal */
+.contenedor {
+    max-width: 100%;
+    margin: 0;
+    padding: 20px;
+    background-color: #fff;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    }
+
+    /* Estilos del encabezado */
+    header {
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        padding: 20px 0;
+        background-color: #333;
+        color: #fff;
+    }
+
+    .logo img {
+        max-width: 80px;
+        margin: 10px;
+    }
+
+    nav ul{
+        list-style: none;
+        display: flex;
+    }
+
+    nav ul li {
+        margin: 0 15px;
+    }
+
+    nav ul li a {
+        color: #fff;
+        text-decoration: none;
+        transition: color 0.3s;
+    }
+
+    nav ul li a:hover {
+        color: #f4f4f4;
+    }
+
+    /* Estilos del contenido principal */
+    main {
+        padding: 20px 0;
+    }
+
+    h1, h2 , h3 {
+        margin-bottom: 15px;
+        color: #333;
+    }
+
+p {
+    margin-bottom: 15px;
+    color: #666;
+}
+
+.articulos {
+    column-count: 2;
+    column-gap: 20px;
+}
+
+article h3 {
+    text-align: center;
+}
+  
+article {
+    margin-bottom: 20px;
+    text-align: justify;
+}
+
+/* Estilos del pie de pagina */
+footer {
+    background-color: #333;
+    color: #fff;
+    text-align: center;
+    padding: 20px;
+    margin-top: 20;
+}
+
+/* Estilos del contenido */
+.contenido {
+    display: flex;
+    flex: 1;
+}
+
+/* Estilos del aside */
+aside.lateral {
+    flex: 0 0 30%;
+    background-color: #eaeaea;
+    padding: 20px;
+}
+
+aside.lateral2 {
+    flex: 50%;
+    background-color: #eaeaea;
+    padding: 20px;
+}
+
+/* Estilos del main */
+.main {
+    flex: 0 0 70%;
+    padding: 20px;
+}
+
+/* Estilos de conocenos */
+.formulario {
+    align-content: center;
+    flex: 50%;
+    margin: 2%;
+}
+/* Estilos del form */
+form {
+    background-color: #fff;
+    padding: 20px;
+    border-radius: 5px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1)
+}
+
+form label {
+    display: block;
+    margin-bottom: 10px
+}
+
+form input[type="text"],
+form input[type="tel"],
+form input[type="email"],
+form textarea {
+    width: 100%;
+    padding: 10px;
+    margin-bottom: 20px;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+}
+
+form input[type="checkbox"] {
+    margin-right: 10px;
+    display: inline;
+}
+
+form .botones {
+    display: flex;
+    justify-content: space-between;
+    margin-top: 1pc;
+}
+
+form .botones button {
+    padding: 10px 20px;
+    border: none;
+    background-color: #333;
+    color: #fff;
+    cursor: pointer;
+    transition: background-color 0.3s;
+}
+
